fix: keep online dictionary URL encoding compatible with Android 12